infra/k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qoomlee-team-00
  labels:
    team: team-00
    env: dev
