infra/k8s/overlays/dev/patch-httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qoomlee-api
spec:
  hostnames:
    - "team-00-qoomlee-api.anuchito.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payment-api
spec:
  hostnames:
    - "team-00-payment-api.anuchito.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
spec:
  hostnames:
    - "team-00-qoomlee-web.anuchito.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgweb
spec:
  hostnames:
    - "team-00-qoomlee-db.anuchito.com"
